--- a/index.html
+++ b/index.html
@@ -10,7 +10,48 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <header>
+        <!-- navbar section start -->
+        <section>
+            <nav class="navbar navbar-expand-lg bg-light ">
+                <div class="container">
+                    <a class="navbar-brand" style="width:20% ;" href="#">Tech Way</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link pe-5  active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link pe-5 " href="#">Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link pe-5 " href="#">Explore</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link pe-5 " href="#">Queries</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link pe-5 " href="#">Feedback</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link pe-5 " href="#">Register</a>
+                            </li>
+                        </ul>
+                        <form class="ms-auto" role="search">
+                            <button class="btn btn-outline-success" type="submit">Register</button>
+                        </form>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        </section>
+        <!-- navbar section end -->
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
