--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section>
             <nav class="navbar navbar-expand-lg bg-light ">
                 <div class="container">
-                    <a class="navbar-brand" style="width:20% ;" href="#">Tech Way</a>
+                    <a class="navbar-brand fw-bold fs-2" style="width:20% ;" href="#">Tech Way</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
                             </li>
                         </ul>
                         <form class="ms-auto" role="search">
-                            <button class="btn btn-outline-success" type="submit">Register</button>
+                            <button class="btn btn-outline-success fw-bold" type="submit">Register</button>
                         </form>
                     </div>
                 </div>
@@ -51,7 +51,55 @@
             </nav>
         </section>
         <!-- navbar section end -->
+        <!-- sliding start -->
+        <section class="mb-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block ">
+                            <h1 class="fw-bold">Step with Digital Education</h1>
+                            <p class="h5">Move ahead with ourselves by the Technology Education and cope up with new
+                                world.</p>
+                            <a class="btn btn-primary" href="#" role="button">GET STARTED</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1 class="fw-bold">Advanced Learning is must</h1>
+                            <p class="h5">Grow yourselves for Digital world so that you can make yourself as
+                                unbeatable. </p>
+                            <a class="btn btn-primary" href="#" role="button">GET STARTED</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1 class="fw-bold">You can Explore the world</h1>
+                            <p class="h5">future world is based on Technology, so adopt it.The whole world is yours if
+                                you can.</p>
+                            <a class="btn btn-primary" href="#" role="button">GET STARTED</a>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- sliding end -->
     </header>
+    <main>
+
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
