--- a/index.html
+++ b/index.html
@@ -98,7 +98,108 @@
         <!-- sliding end -->
     </header>
     <main>
+        <!-- Course start -->
+        <section>
+            <div class="w-50 text-center m-auto">
+                <h1 class="fw-bold">Discover Our Popular <br>
+                    Courses</h1>
+                <p class="h6 pb-3">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="container text-center">
+                <div class="row g-4">
+                    <div class="col-6">
+                        <div class="border rounded bg-light d-flex">
+                            <div>
+                                <img src="./images/course/course-1.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="pt-1">
+                                <h4>Fundamental Of UI/UX Design
+                                </h4>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light d-flex">
+                            <div>
+                                <img src="./images/course/course-2.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="pt-1">
+                                <h4>Javascript Basic to advanced
+                                </h4>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light d-flex">
+                            <div>
+                                <img src="./images/course/course-3.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="pt-1">
+                                <h4>Fullstack Web Development
+                                </h4>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light d-flex">
+                            <div>
+                                <img src="./images/course/course-4.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="pt-1">
+                                <h4>Digital Marketing
+                                </h4>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light d-flex">
+                            <div>
+                                <img src="./images/course/course-5.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="pt-1">
+                                <h4>Photography Basic Rules
+                                </h4>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light d-flex">
+                            <div>
+                                <img src="./images/course/course-6.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="pt-1">
+                                <h4>Motion Graphics
+                                </h4>
+                                <p>Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+            <div class="my-4 d-flex justify-content-center">
+                <a class="btn btn-primary" href="#" role="button">View More Courses</a>
+            </div>
+        </section>
+        <!-- Course end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
