--- a/index.html
+++ b/index.html
@@ -200,6 +200,18 @@
             </div>
         </section>
         <!-- Course end -->
+        <!-- Register section start -->
+        <section class="bg-primary d-flex justify-content-between align-items-center">
+            <div class="text-white">
+                <h2>Ready to join?</h2>
+                <p>It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
+            </div>
+            <div>
+                <a class="btn btn-light text-primary fw-semibold" href="#">Register Now</a>
+            </div>
+        </section>
+        <!-- Register section end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
