--- a/index.html
+++ b/index.html
@@ -201,14 +201,47 @@
         </section>
         <!-- Course end -->
         <!-- Register section start -->
-        <section class="bg-primary d-flex justify-content-between align-items-center">
+        <section class=" container bg-primary d-flex justify-content-evenly align-items-center">
             <div class="text-white">
                 <h2>Ready to join?</h2>
                 <p>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout.</p>
             </div>
+            <!----------------- 
+                    Modal added 
+            -------------------->
             <div>
-                <a class="btn btn-light text-primary fw-semibold" href="#">Register Now</a>
+                <button type="button" class="btn btn-light text-primary fw-semibold" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Register Now</button>
+
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="recipient-name" class="col-form-label">Email:</label>
+                                        <input type="text" class="form-control" id="recipient-name">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="message-text" class="col-form-label">Password:</label>
+                                        <textarea class="form-control" id="message-text"></textarea>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cencel</button>
+                                <button type="button" class="btn btn-primary">Registration</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Register section end -->
