--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         </section>
         <!-- navbar section end -->
         <!-- sliding start -->
-        <section class="mb-5">
+        <section class="mb-5 container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block ">
+                        <img src="./images/cover/cover-1.png" class="d-block" alt="...">
+                        <div class="carousel-caption d-none d-md-block w-50">
                             <h1 class="fw-bold">Step with Digital Education</h1>
                             <p class="h5">Move ahead with ourselves by the Technology Education and cope up with new
                                 world.</p>
@@ -65,8 +65,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <img src="./images/cover/cover-2.jpg" class="d-block" alt="...">
+                        <div class="carousel-caption d-none d-md-block w-50">
                             <h1 class="fw-bold">Advanced Learning is must</h1>
                             <p class="h5">Grow yourselves for Digital world so that you can make yourself as
                                 unbeatable. </p>
@@ -74,8 +74,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <img src="./images/cover/cover-3.jpg" class="d-block" alt="...">
+                        <div class="carousel-caption d-none d-md-block w-50">
                             <h1 class="fw-bold">You can Explore the world</h1>
                             <p class="h5">future world is based on Technology, so adopt it.The whole world is yours if
                                 you can.</p>
@@ -248,32 +248,32 @@
         <!-- Queries section start -->
         <section>
             <div class="w-50 text-center m-auto">
-                <h1 class="fw-bold">Discover Our Popular <br>
-                    Courses</h1>
+                <h1 class="fw-bold">Should know these things.</h1>
                 <p class="h6 pb-3">It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
             </div>
             <!------------------
                 Accordion added 
             -------------------->
-            <div class="w-50 text-center m-auto">
+            <div class="w-75 m-auto mb-5">
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Accordion Item #1
+                                What is the difference between flexbox and grid?
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is shown by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>(1.)</strong> Flexbox is designed for one-dimensional layouts, and Grid for
+                                two-dimensional layouts. <br>
+                                <strong>(2.)</strong>The approach of CSS Grid is the layout first, while the Flexbox
+                                approach is primarily the content. <br>
+                                <strong>(3.)</strong>The Flexbox layout is best suited to application components and
+                                small-scale layouts, while the Grid layout is designed for larger-scale layouts that are
+                                not linear in design.
                             </div>
                         </div>
                     </div>
@@ -281,18 +281,17 @@
                         <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Accordion Item #2
+                                What is the difference between bootstrap and tailwind?
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                until the collapse plugin adds the appropriate classes that we use to style each
-                                element. These classes control the overall appearance, as well as the showing and hiding
-                                via CSS transitions. You can modify any of this with custom CSS or overriding our
-                                default variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>Bootstrap</strong> is an open-source framework that is used to design
+                                responsive websites better, faster, and easier. It's comes with a set of pre-styled
+                                responsive, mobile-first
+                                components that possess a definite UI kit. <strong>Tailwind</strong> CSS is detailed as
+                                "A utility-first CSS framework for rapid UI development and It is highly customizable."
                             </div>
                         </div>
                     </div>
@@ -300,18 +299,33 @@
                         <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Accordion Item #3
+                                What is css box model?
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>Css Box Model</strong> is a
+                                container that contains multiple properties including borders, margin, padding, and the
+                                content itself. It is used to create the design and layout of web pages. It can be used
+                                as a toolkit for customizing the layout of different elements.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                What is a semantic tag?
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>Semantic</strong> element clearly describes its meaning to both
+                                the browser and the developer.The HTML semantics refers to the tags that provide meaning
+                                to an HTML page rather than just presentation. It makes HTML more comprehensible by
+                                better defining the different sections and layout of web pages.
                             </div>
                         </div>
                     </div>
