--- a/index.html
+++ b/index.html
@@ -333,6 +333,22 @@
             </div>
         </section>
         <!-- Queries section End -->
+        <!-- Company logo section start  -->
+        <section my-5>
+            <div class="container">
+                <h2 class="text-center my-4">Trusted by over 800+ companies</h2>
+                <div class="d-flex justify-content-center">
+                    <p><img src="./images/company/company-1.png" class="p-3 w-75" alt=""></p>
+                    <p><img src="./images/company/company-2.png" class="p-3 w-75" alt=""></p>
+                    <p><img src="./images/company/company-3.png" class="p-3 w-75" alt=""></p>
+                    <p><img src="./images/company/company-4.png" class="p-3 w-75" alt=""></p>
+                    <p><img src="./images/company/company-5.png" class="p-3 w-75" alt=""></p>
+                    <p><img src="./images/company/company-6.png" class="ps-3 w-75" alt=""></p>
+                </div>
+
+            </div>
+        </section>
+        <!-- Company logo section end  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
