--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Technology Learning</title>
+    <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- font awesome link -->
+    <script src="https://kit.fontawesome.com/932580e18c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -350,6 +353,23 @@
         </section>
         <!-- Company logo section end  -->
     </main>
+    <footer>
+        <div class="text-center text-white bg-dark">
+            <div>
+                <h2>Tech Way</h2>
+                <p>Office-1000,Gulshan,Gulshan Avenue</p>
+                <p>Dhaka, State of Bangladesh</p>
+                <p>Privacy Ploicy | Terms of use</p>
+                <a href="https://www.facebook.com/" target="_blank"><i
+                        class="fa-brands fa-facebook-f text-white p-3"></i></a>
+                <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter text-white p-3"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i
+                        class="fa-brands fa-instagram text-white p-3"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank"><i
+                        class="fa-brands fa-linkedin text-white ps-3"></i></a>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
