custom css added

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- font awesome link -->
     <script src="https://kit.fontawesome.com/932580e18c.js" crossorigin="anonymous"></script>
+    <!-- custom css link -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
         <!-- navbar section start -->
         <section>
-            <nav class="navbar navbar-expand-lg bg-light ">
+            <nav class="navbar navbar-expand-lg bg-light fixed-top">
                 <div class="container">
-                    <a class="navbar-brand fw-bold fs-2" style="width:20% ;" href="#">Tech Way</a>
+                    <a class="navbar-brand fw-bold fs-2" href="#">Tech Way</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -30,19 +32,19 @@
                                 <a class="nav-link pe-5  active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link pe-5 " href="#">Courses</a>
+                                <a class="nav-link pe-5 " href="#courses">Courses</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link pe-5 " href="#">Explore</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link pe-5 " href="#">Queries</a>
+                                <a class="nav-link pe-5 " href="#queries">Queries</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link pe-5 " href="#">Feedback</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link pe-5 " href="#">Register</a>
+                                <a class="nav-link" href="#register">Register</a>
                             </li>
                         </ul>
                         <form class="ms-auto" role="search">
@@ -64,7 +66,7 @@
                             <h1 class="fw-bold">Step with Digital Education</h1>
                             <p class="h5">Move ahead with ourselves by the Technology Education and cope up with new
                                 world.</p>
-                            <a class="btn btn-primary" href="#" role="button">GET STARTED</a>
+                            <a class="btn background-color text-white" href="#" role="button">GET STARTED</a>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -73,7 +75,7 @@
                             <h1 class="fw-bold">Advanced Learning is must</h1>
                             <p class="h5">Grow yourselves for Digital world so that you can make yourself as
                                 unbeatable. </p>
-                            <a class="btn btn-primary" href="#" role="button">GET STARTED</a>
+                            <a class="btn background-color text-white" href="#" role="button">GET STARTED</a>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -82,7 +84,7 @@
                             <h1 class="fw-bold">You can Explore the world</h1>
                             <p class="h5">future world is based on Technology, so adopt it.The whole world is yours if
                                 you can.</p>
-                            <a class="btn btn-primary" href="#" role="button">GET STARTED</a>
+                            <a class="btn background-color text-white" href="#" role="button">GET STARTED</a>
                         </div>
                     </div>
                 </div>
@@ -102,11 +104,11 @@
     </header>
     <main>
         <!-- Course start -->
-        <section>
+        <section class="margin" id="courses">
             <div class="w-50 text-center m-auto">
                 <h1 class="fw-bold">Discover Our Popular <br>
                     Courses</h1>
-                <p class="h6 pb-3">It is a long established fact that a reader will be distracted by the readable
+                <p class="h6 pb-3 mb-3">It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
             </div>
             <div class="container text-center">
@@ -121,7 +123,7 @@
                                 </h4>
                                 <p>Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5 class="text-primary">Price : 20$</h5>
+                                <h5 class="color">Price : 20$</h5>
                             </div>
                         </div>
                     </div>
@@ -135,7 +137,7 @@
                                 </h4>
                                 <p>Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5 class="text-primary">Price : 20$</h5>
+                                <h5 class="color">Price : 20$</h5>
                             </div>
                         </div>
                     </div>
@@ -149,7 +151,7 @@
                                 </h4>
                                 <p>Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5 class="text-primary">Price : 20$</h5>
+                                <h5 class="color">Price : 20$</h5>
                             </div>
                         </div>
                     </div>
@@ -163,7 +165,7 @@
                                 </h4>
                                 <p>Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5 class="text-primary">Price : 20$</h5>
+                                <h5 class="color">Price : 20$</h5>
                             </div>
                         </div>
                     </div>
@@ -177,7 +179,7 @@
                                 </h4>
                                 <p>Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5 class="text-primary">Price : 20$</h5>
+                                <h5 class="color">Price : 20$</h5>
                             </div>
                         </div>
                     </div>
@@ -191,7 +193,7 @@
                                 </h4>
                                 <p>Some quick example text to build on the card title
                                     and make up the bulk of the card.</p>
-                                <h5 class="text-primary">Price : 20$</h5>
+                                <h5 class="color">Price : 20$</h5>
                             </div>
                         </div>
                     </div>
@@ -199,12 +201,13 @@
                 </div>
             </div>
             <div class="my-4 d-flex justify-content-center">
-                <a class="btn btn-primary" href="#" role="button">View More Courses</a>
+                <a class="btn  background-color text-white mb-5" href="#" role="button">View More Courses</a>
             </div>
         </section>
         <!-- Course end -->
         <!-- Register section start -->
-        <section class=" container bg-primary d-flex justify-content-evenly align-items-center my-5">
+        <section id="register"
+            class=" container background-color border rounded register d-flex justify-content-evenly align-items-center margin">
             <div class="text-white">
                 <h2>Ready to join?</h2>
                 <p>It is a long established fact that a reader will be distracted by the
@@ -214,7 +217,7 @@
                     Modal added 
             -------------------->
             <div>
-                <button type="button" class="btn btn-light text-primary fw-semibold" data-bs-toggle="modal"
+                <button type="button" class="btn btn-light fw-semibold  color" data-bs-toggle="modal"
                     data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Register Now</button>
 
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -249,7 +252,7 @@
         </section>
         <!-- Register section end -->
         <!-- Queries section start -->
-        <section>
+        <section class="margin" id="queries">
             <div class="w-50 text-center m-auto">
                 <h1 class="fw-bold">Should know these things.</h1>
                 <p class="h6 pb-3">It is a long established fact that a reader will be distracted by the readable
@@ -258,7 +261,7 @@
             <!------------------
                 Accordion added 
             -------------------->
-            <div class="w-75 m-auto mb-5">
+            <div class="w-50 m-auto">
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
@@ -337,7 +340,7 @@
         </section>
         <!-- Queries section End -->
         <!-- Company logo section start  -->
-        <section my-5>
+        <section class="margin">
             <div class="container">
                 <h2 class="text-center my-4">Trusted by over 800+ companies</h2>
                 <div class="d-flex justify-content-center">
@@ -354,7 +357,7 @@
         <!-- Company logo section end  -->
     </main>
     <footer>
-        <div class="text-center text-white bg-dark">
+        <div class="text-white footer text-center d-flex justify-content-center align-items-center">
             <div>
                 <h2>Tech Way</h2>
                 <p>Office-1000,Gulshan,Gulshan Avenue</p>
