slide overlay added

--- a/index.html
+++ b/index.html
@@ -60,29 +60,42 @@
         <section class="mb-5 container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active position-relative">
+                        <div class="position-absolute slide-bg opacity-50 h-100 w-100">
+                        </div>
                         <img src="./images/cover/cover-1.png" class="d-block" alt="...">
-                        <div class="carousel-caption d-none d-md-block w-50">
-                            <h1 class="fw-bold">Step with Digital Education</h1>
-                            <p class="h5">Move ahead with ourselves by the Technology Education and cope up with new
-                                world.</p>
-                            <a class="btn background-color text-white" href="#" role="button">GET STARTED</a>
+                        <div
+                            class="carousel-caption d-none d-md-block w-50 mt-5 position-absolute top-50 start-50 translate-middle">
+                            <div>
+                                <h1 class="fw-bold pb-4">Step with Digital Education</h1>
+                                <p class="h5 pb-4">Move ahead with ourselves by the Technology Education and cope up
+                                    with new
+                                    world.</p>
+                                <a class="btn background-color text-white" href="#" role="button">GET STARTED</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute slide-bg opacity-50 h-100 w-100">
+                        </div>
                         <img src="./images/cover/cover-2.jpg" class="d-block" alt="...">
-                        <div class="carousel-caption d-none d-md-block w-50">
-                            <h1 class="fw-bold">Advanced Learning is must</h1>
-                            <p class="h5">Grow yourselves for Digital world so that you can make yourself as
+                        <div
+                            class="carousel-caption d-none d-md-block w-50 mt-5 position-absolute top-50 start-50 translate-middle">
+                            <h1 class="fw-bold pb-4">Advanced Learning is must</h1>
+                            <p class="h5 pb-4">Grow yourselves for Digital world so that you can make yourself as
                                 unbeatable. </p>
                             <a class="btn background-color text-white" href="#" role="button">GET STARTED</a>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item position-relative">
+                        <div class="position-absolute slide-bg opacity-50 h-100 w-100">
+                        </div>
                         <img src="./images/cover/cover-3.jpg" class="d-block" alt="...">
-                        <div class="carousel-caption d-none d-md-block w-50">
-                            <h1 class="fw-bold">You can Explore the world</h1>
-                            <p class="h5">future world is based on Technology, so adopt it.The whole world is yours if
+                        <div
+                            class="carousel-caption d-none d-md-block w-50 mt-5 position-absolute top-50 start-50 translate-middle">
+                            <h1 class="fw-bold pb-4">You can Explore the world</h1>
+                            <p class="h5 pb-4">future world is based on Technology, so adopt it.The whole world is yours
+                                if
                                 you can.</p>
                             <a class="btn background-color text-white" href="#" role="button">GET STARTED</a>
                         </div>
