--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <nav class="navbar navbar-expand-lg bg-light fixed-top">
                 <div class="container">
                     <a class="navbar-brand fw-bold fs-2" href="#">Tech Way</a>
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -48,9 +49,10 @@
                             </li>
                         </ul>
                         <form class="ms-auto" role="search">
-                            <button class="btn btn-outline-success fw-bold" type="submit">Register</button>
+                            <button class="btn btn-outline-success md-d-block fw-bold" type="submit">Register</button>
                         </form>
                     </div>
+
                 </div>
                 </div>
             </nav>
@@ -64,8 +66,7 @@
                         <div class="position-absolute slide-bg opacity-50 h-100 w-100">
                         </div>
                         <img src="./images/cover/cover-1.png" class="d-block" alt="...">
-                        <div
-                            class="carousel-caption d-none d-md-block w-50 mt-5 position-absolute top-50 start-50 translate-middle">
+                        <div class="carousel-caption w-50 mt-5 position-absolute top-50 start-50 translate-middle">
                             <div>
                                 <h1 class="fw-bold pb-4">Step with Digital Education</h1>
                                 <p class="h5 pb-4">Move ahead with ourselves by the Technology Education and cope up
@@ -79,8 +80,7 @@
                         <div class="position-absolute slide-bg opacity-50 h-100 w-100">
                         </div>
                         <img src="./images/cover/cover-2.jpg" class="d-block" alt="...">
-                        <div
-                            class="carousel-caption d-none d-md-block w-50 mt-5 position-absolute top-50 start-50 translate-middle">
+                        <div class="carousel-caption w-50 mt-5 position-absolute top-50 start-50 translate-middle">
                             <h1 class="fw-bold pb-4">Advanced Learning is must</h1>
                             <p class="h5 pb-4">Grow yourselves for Digital world so that you can make yourself as
                                 unbeatable. </p>
@@ -91,8 +91,7 @@
                         <div class="position-absolute slide-bg opacity-50 h-100 w-100">
                         </div>
                         <img src="./images/cover/cover-3.jpg" class="d-block" alt="...">
-                        <div
-                            class="carousel-caption d-none d-md-block w-50 mt-5 position-absolute top-50 start-50 translate-middle">
+                        <div class="carousel-caption w-50 mt-5 position-absolute top-50 start-50 translate-middle">
                             <h1 class="fw-bold pb-4">You can Explore the world</h1>
                             <p class="h5 pb-4">future world is based on Technology, so adopt it.The whole world is yours
                                 if
@@ -126,12 +125,12 @@
             </div>
             <div class="container text-center">
                 <div class="row g-4">
-                    <div class="col-6">
-                        <div class="border rounded bg-light d-flex">
+                    <div class="col-lg-6">
+                        <div class="border rounded bg-light d-flex course">
                             <div>
                                 <img src="./images/course/course-1.png" class="img-fluid" alt="">
                             </div>
-                            <div class="pt-1">
+                            <div class="pt-2 text">
                                 <h4>Fundamental Of UI/UX Design
                                 </h4>
                                 <p>Some quick example text to build on the card title
@@ -140,12 +139,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light d-flex">
+                    <div class="col-lg-6">
+                        <div class="border rounded bg-light d-flex course">
                             <div>
                                 <img src="./images/course/course-2.png" class="img-fluid" alt="">
                             </div>
-                            <div class="pt-1">
+                            <div class="pt-2">
                                 <h4>Javascript Basic to advanced
                                 </h4>
                                 <p>Some quick example text to build on the card title
@@ -154,12 +153,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light d-flex">
+                    <div class="col-lg-6">
+                        <div class="border rounded bg-light d-flex course">
                             <div>
                                 <img src="./images/course/course-3.png" class="img-fluid" alt="">
                             </div>
-                            <div class="pt-1">
+                            <div class="pt-2">
                                 <h4>Fullstack Web Development
                                 </h4>
                                 <p>Some quick example text to build on the card title
@@ -168,12 +167,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light d-flex">
+                    <div class="col-lg-6">
+                        <div class="border rounded bg-light d-flex course">
                             <div>
                                 <img src="./images/course/course-4.png" class="img-fluid" alt="">
                             </div>
-                            <div class="pt-1">
+                            <div class="pt-2">
                                 <h4>Digital Marketing
                                 </h4>
                                 <p>Some quick example text to build on the card title
@@ -182,12 +181,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light d-flex">
+                    <div class="col-lg-6">
+                        <div class="border rounded bg-light d-flex course">
                             <div>
                                 <img src="./images/course/course-5.png" class="img-fluid" alt="">
                             </div>
-                            <div class="pt-1">
+                            <div class="pt-2">
                                 <h4>Photography Basic Rules
                                 </h4>
                                 <p>Some quick example text to build on the card title
@@ -196,12 +195,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light d-flex">
+                    <div class="col-lg-6">
+                        <div class="border rounded bg-light d-flex course">
                             <div>
                                 <img src="./images/course/course-6.png" class="img-fluid" alt="">
                             </div>
-                            <div class="pt-1">
+                            <div class="pt-2">
                                 <h4>Motion Graphics
                                 </h4>
                                 <p>Some quick example text to build on the card title
