--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </ul>
                     </div>
                     <form class="ms-auto d-none d-md-block" role="search">
-                        <button class="btn btn-outline-success md-d-block fw-bold" type="submit">Register</button>
+                        <button class="btn btn-outline-info md-d-block fw-bold" type="submit">Register</button>
                     </form>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -124,7 +124,7 @@
             <div class="container text-center">
                 <div class="row g-4">
                     <div class="col-lg-6">
-                        <div class="border rounded bg-light d-flex course">
+                        <div class="border rounded bg-light d-flex course ">
                             <div>
                                 <img src="./images/course/course-1.png" class="img-fluid" alt="">
                             </div>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="border rounded bg-light d-flex course">
+                        <div class="border rounded bg-light d-flex course ">
                             <div>
                                 <img src="./images/course/course-3.png" class="img-fluid" alt="">
                             </div>
